# cow-infra

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/cow/: aws.py  cli.py  commands.py  shadow.py  state.py
