[project]
name = "cow-infra"
version = "0.0.1"
description = "Copy-on-write infrastructure prototype"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
]

[project.scripts]
cow = "cow.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
